# GB-Emulator

./: .gitignore  Bug List.txt  CMakeLists.txt  GL README.txt  README.txt  gbc_color_analysis.arff
include/: CPU.h  Cartridge.h  Common.h  Debugger.h  Emulator.h  EmulatorConfiguration.h  FileIO.h  GBCColorPalette.h  GBCGraphics.h  GBGraphics.h  Graphics.h  Graphics.h.old  Input.h  MBC.h  Memory.h  RTC.h  Render.h  Sound.h  Timers.h
include/ML/: Layer.h  Matrix.h  NeuralNet.h
include/Sound/: AudioQueue.h  DutyUnit.h  EnvelopeUnit.h  LFSR.h  LengthCounter.h  RingBuffer.h  SoundUnit1.h  SoundUnit2.h  SoundUnit3.h  SoundUnit4.h  StreamingAudioQueue.h  SweepUnit.h
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: CPU.cpp  Cartridge.cpp  Debugger.cpp  Emulator.cpp  FileIO.cpp  GBCColorPalette.cpp  GBCGraphics.cpp  GBGraphics.cpp  GL_Render.cpp  Graphics.cpp  Graphics.cpp.old  Input.cpp  MBC.cpp  Memory.cpp  RTC.cpp  SDL_Environment.cpp  SDL_Render.cpp  Sound.cpp  Timers.cpp  main.cpp
src/ML/: Layer.cpp  Matrix.cpp  NeuralNet.cpp
src/Sound/: SoundUnit1.cpp  SoundUnit2.cpp  SoundUnit3.cpp  SoundUnit4.cpp
